created dbHelper \n created sqlite manager crud operations

--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">MiS</string>
-    <string-array name="nav_drawer_titles">
+    <string-array name="nav_drawer_items">
         <item>Wallet</item>
         <item>Routes</item>
         <item>Time</item>
