fragments for each view

--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -6,4 +6,5 @@
         <item>Routes</item>
         <item>Time</item>
     </string-array>
+    <string name="label_wallet">Spendings :</string>
 </resources>
