added settings activity

--- a/app/src/main/res/values-en/string.xml
+++ b/app/src/main/res/values-en/string.xml
@@ -7,4 +7,5 @@
         <item>Time</item>
     </string-array>
     <string name="label_wallet">Spendings :</string>
+    <string name="setting_name">Settings</string>
 </resources>
