--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,4 +13,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/setting_name"
         android:id="@+id/textView3" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logout_text"
+        android:id="@+id/button_log_out" />
 </LinearLayout>
